[package]
name = "extra"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
futures = "0.3"
either = "1.15"

[dev-dependencies]
once_cell = { version = "1.21", features = ["parking_lot"] }
